--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,7 +21,7 @@ $strong-highlighted-background: rgba(128, 128, 128, 0.25);
 $white-transparent-background-1: rgba(255, 255, 255, 0.01);
 $white-transparent-background-5: rgba(255, 255, 255, 0.05);
 $white-transparent-background-10: rgba(255, 255, 255, 0.1);
-$white-transparent-background-25: rgba(255, 255, 255, 0.25);
+$white-transparent-background-20: rgba(255, 255, 255, 0.20);
 $white-transparent-background-35: rgba(255, 255, 255, 0.35);
 $white-transparent-background-75: rgba(255, 255, 255, 0.75);
 
@@ -39,6 +39,8 @@ $standard-font-size: 0.9rem;
 $big-font-size: 1.25rem;
 $huge-font-size: 2.5rem;
 $icon-font-size: 3rem;
+$small-icon-font-size: 1.75rem;
+
 
 $shadow: 0 0 25px 0 rgba(20, 20, 20, 0.1);
 $strong-shadow: 0px 8px 15px 0px rgba(29, 29, 29, 0.5);
