--- a/src/components/dishes/dish-card/DishCard.scss
+++ b/src/components/dishes/dish-card/DishCard.scss
@@ -1,3 +1,5 @@
+@import "/src/styles/variables";
+
 .draggable-dish-card {
   width: 100%;
 
@@ -5,6 +7,18 @@
     .dish-card-side {
       width: 100%;
       height: 100%;
+    }
+
+    .add-to-menu-button {
+      box-sizing: border-box;
+      padding: $small-element-spacing;
+      font-size: $small-icon-font-size;
+      position: absolute;
+      z-index: 1000;
+      top: $standard-element-spacing;
+      right: $standard-element-spacing;
+      background: rgba(0, 0, 0, 0.8);
+      border-radius: $round-border-radius-50;
     }
   }
 }
