--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -13,7 +13,7 @@
 }
 
 .ingredients-edit-form {
-  padding: $standard-element-spacing $huge-element-spacing;
+  padding: $standard-element-spacing;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -32,6 +32,8 @@
   }
 
   .ingredients-edit-form-content {
+    padding: $standard-element-spacing $big-element-spacing;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,7 +79,7 @@
 
       .editable-text-field {
         padding: $small-element-spacing $standard-element-spacing;
-        background-color: $highlighted-background;
+        background-color: $white-transparent-background-5;
         border-radius: $outer-border-radius-10;
         flex-grow: 1;
       }
