--- a/src/components/pages/menu-page/menu-list/MenuList.scss
+++ b/src/components/pages/menu-page/menu-list/MenuList.scss
@@ -3,6 +3,7 @@
 
 .menu-list-container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
 
@@ -45,24 +46,23 @@
     }
   }
 
-  .menu-list-header {
-    @include translucent-tile;
-    background: $white-transparent-background-10;
-    margin-bottom: $small-element-spacing;
-    padding: $standard-element-spacing 0;
-    display: flex;
+  .menu-plan-header {
+    @include info-header;
+    margin: $standard-element-spacing 0;
     font-weight: bold;
+  }
 
-    .menu-list-header-date {
-      width: 20%;
-    }
-
-    .menu-list-header-dish {
-      width: 80%;
-    }
+  .menu-plan-info {
+    @include info-description;
+    width: 90%;
+    margin: 0 auto $big-element-spacing;
+    opacity: 0.9;
   }
 
  .menu-list-columns {
+   margin-bottom: calc(#{$small-icon-font-size} + #{$big-element-spacing});
+   flex-grow: 1;
+   overflow-y: auto;
    display: flex;
    flex-direction: row;
 
@@ -73,7 +73,7 @@
        display: flex;
        justify-content: center;
        font-weight: bold;
-       height: 7vh;
+       height: 6.5vh;
      }
    }
 
@@ -97,12 +97,13 @@
      z-index: 1;
 
      .menu-plan-dish {
-       background: $white-transparent-background-10;
        margin-left: $small-element-spacing;
+       background: $white-transparent-background-5;
        align-items: center;
 
        .menu-plan-dish-name {
          margin-left: $standard-element-spacing;
+         font-size: $small-font-size;
          text-overflow: ellipsis;
          overflow: hidden;
          font-weight: 500;
