--- a/src/components/pages/menu-page/MenuPage.scss
+++ b/src/components/pages/menu-page/MenuPage.scss
@@ -8,7 +8,7 @@
     @include navbar;
   }
 
-  .menu-plan-container {
+  .menu-container {
     @include content-container;
     height: calc(100 * var(--vh) - #{$bottom-navbar-height} - 2 * #{$standard-element-spacing} - #{$page-offset} - #{$top-navbar-height});
     margin-top: calc(#{$top-navbar-height} + #{$standard-element-spacing} + #{$page-offset});
@@ -17,7 +17,7 @@
     flex-direction: column;
     position: relative;
 
-    .menu-plan, .menu-ingredients-container {
+    .menu, .menu-ingredients-container {
       width: 90%;
     }
 
