--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #ffc400;
+    background-color: rgba(255, 196, 0, 0.5);
     border-radius: 10px;
 }
 
