--- a/src/components/dishes/dish-card/DishCard.scss
+++ b/src/components/dishes/dish-card/DishCard.scss
@@ -1,24 +1,23 @@
 @import "/src/styles/variables";
 
-.draggable-dish-card {
-  width: 100%;
+.dish-card {
+  touch-action: none;
 
-  .dish-card {
-    .dish-card-side {
-      width: 100%;
-      height: 100%;
-    }
+  .dish-card-side {
+    width: 100%;
+    height: 100%;
+    will-change: transform;
+  }
 
-    .add-to-menu-button {
-      box-sizing: border-box;
-      padding: $small-element-spacing;
-      font-size: $small-icon-font-size;
-      position: absolute;
-      z-index: 1000;
-      top: $standard-element-spacing;
-      right: $standard-element-spacing;
-      background: rgba(0, 0, 0, 0.8);
-      border-radius: $round-border-radius-50;
-    }
+  .add-to-menu-button {
+    box-sizing: border-box;
+    padding: $small-element-spacing;
+    font-size: $small-icon-font-size;
+    position: absolute;
+    z-index: 1000;
+    top: $standard-element-spacing;
+    right: $standard-element-spacing;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: $round-border-radius-50;
   }
 }
