--- a/src/components/pages/authentication/AuthenticationPage.scss
+++ b/src/components/pages/authentication/AuthenticationPage.scss
@@ -4,6 +4,12 @@
 .authentication-page-container {
   @include page-container;
 
+  .sign-in-slide, .sign-up-slide {
+    width: 100%;
+    height: 100%;
+    will-change: transform;
+  }
+
   .sign-in-slide {
     background: #270070;
   }
@@ -55,11 +61,11 @@
     }
 
     .sign-in-image {
-      max-height: 50vh;
+      max-width: 80vw;
     }
 
     .sign-up-image {
-      max-height: 30vh;
+      max-width: 50vw;
     }
 
     .authentication-input-row {
@@ -92,6 +98,7 @@
     }
 
     .authentication-panel-redirect {
+      z-index: 10;
       margin: 0 auto $big-element-spacing auto;
     }
   }
