--- a/src/components/status-screen/StatusScreen.scss
+++ b/src/components/status-screen/StatusScreen.scss
@@ -3,15 +3,19 @@
 
 .status-screen-popup {
   @include page-container;
+  box-sizing: border-box;
+  overflow: hidden;
   background-color: rgb(20, 20, 20);
 
   .status-screen-container {
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    will-change: transform;
 
     .status-screen-image {
       height: 30vh;
