--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -19,27 +20,37 @@ body {
     }
 }
 
-* {
-    scrollbar-width: auto;
-    scrollbar-color: #ffc400 rgba(0, 0, 0, 0);
-}
-
 *::-webkit-scrollbar {
-    width: 0.35rem;
+    display: none;
 }
 
-*::-webkit-scrollbar-track {
-    background: none;
-}
+@media (min-width: 900px) {
+    * {
+        scrollbar-width: auto;
+        scrollbar-color: #ffc400 rgba(0, 0, 0, 0);
+    }
 
-*::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 196, 0, 0.5);
-    border-radius: 10px;
+    *::-webkit-scrollbar {
+        width: 0.35rem;
+    }
+
+    *::-webkit-scrollbar-track {
+        background: none;
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 196, 0, 0.5);
+        border-radius: 10px;
+    }
 }
 
 .swiper {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
+    position: relative;
+    overflow: visible !important;
+    overflow-y: hidden;
 
     .swiper-slide {
         display: flex;
