T-53: Fix problems with dish card back side and swiper

--- a/src/components/dishes/dishes-list/DishesList.scss
+++ b/src/components/dishes/dishes-list/DishesList.scss
@@ -2,7 +2,7 @@
 @import './src/styles/shared';
 
 .dishes-list-container {
-  @include content-container;
+  @include content-container(100);
 
   .dish-card {
     @include dish-card;
