--- a/src/components/dishes/dish-card/DishCard.scss
+++ b/src/components/dishes/dish-card/DishCard.scss
@@ -1,4 +1,21 @@
 @import "/src/styles/variables";
+@import "/src/styles/shared";
+
+.dish-card-motion {
+  will-change: transform;
+}
+
+.dish-card-back-dialog {
+  overflow: hidden;
+  top: $standard-element-spacing;
+  @include content-container(85);
+
+  .dish-card-side {
+    @include dish-card;
+    width: 100%;
+    margin: 0;
+  }
+}
 
 .dish-card {
   touch-action: none;
@@ -6,7 +23,6 @@
   .dish-card-side {
     width: 100%;
     height: 100%;
-    will-change: transform;
   }
 
   .add-to-menu-button {
