--- a/src/components/dishes/dish-card/DishCardShared.scss
+++ b/src/components/dishes/dish-card/DishCardShared.scss
@@ -22,6 +22,7 @@
 
   .dish-name {
     width: 100%;
+    box-sizing: border-box;
     white-space: nowrap;
     text-overflow: ellipsis;
     padding: $standard-element-spacing;
