--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -12,6 +12,11 @@
     }
   }
 
+  .add-ingredient-button {
+    display: block;
+    margin: 0 auto;
+  }
+
   .servings-container {
     display: flex;
     flex-direction: row;
