--- a/src/components/custom-alert/CustomAlert.scss
+++ b/src/components/custom-alert/CustomAlert.scss
@@ -9,12 +9,10 @@
   border-radius: $outer-border-radius-10;
   background: linear-gradient(90deg, rgba(34, 34, 34, 0.70) 0%, rgba(34, 34, 34, 0.70) 100%);
   overflow: hidden;
-
-  -webkit-box-shadow: $strong-shadow;
-  -moz-box-shadow: $strong-shadow;
-  box-shadow: $strong-shadow;
+  @include shadow($strong-shadow);
 
   .custom-alert {
+    min-width: calc(#{$max-page-width} * 0.85);
     flex-grow: 1;
     flex-wrap: nowrap;
     display: flex;
