--- a/src/index.scss
+++ b/src/index.scss
@@ -9,13 +9,13 @@ body {
     -moz-osx-font-smoothing: grayscale;
 
     &:before {
-        background: url('../public/background.svg');
+        background: linear-gradient(350deg, rgb(0, 217, 255) 30%, rgba(0,226,255,0) 100%);
         content: "";
         background-size: cover;
         position: absolute;
         width: 100%;
         height: 100%;
-        opacity: 0.05;
+        opacity: 0.2;
         z-index: 0;
     }
 }
