--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -17,12 +17,12 @@
 @mixin dish-card {
   width: $dish-card-width;
   height: calc(100 * var(--vh) - #{$bottom-navbar-height} - #{$huge-element-spacing} - #{$page-offset} - #{$top-navbar-height});
-  margin: $huge-element-spacing auto 0;
+  margin: $standard-element-spacing auto 0;
   position: relative;
   box-sizing: border-box;
-  overflow: hidden;
   display: flex;
   @include translucent-tile;
+  @include shadow($strong-shadow);
 }
 
 @mixin navbar {
@@ -77,7 +77,7 @@
 
     .list-item-info {
       margin-left: $standard-element-spacing;
-      opacity: 0.49;
+      opacity: 0.5;
       font-size: $tiny-font-size;
     }
   }
@@ -87,12 +87,14 @@
   display: flex;
   align-items: center;
   padding: $standard-element-spacing;
-  border-radius: $outer-border-radius-10;
+  border-radius: $round-border-radius-50;
   position: relative;
+
 
   .search-input {
     flex-grow: 1;
     margin: 0 $standard-element-spacing;
+    font-size: $standard-font-size;
     font-weight: bold;
   }
 }
@@ -115,9 +117,7 @@
 }
 
 @mixin translucent-tile {
-  -webkit-box-shadow: $shadow;
-  -moz-box-shadow: $shadow;
-  box-shadow: $shadow;
+  @include shadow($shadow);
   background: $gradient-transparent-background-soft;
   border-radius: $outer-border-radius-10;
   padding: $small-element-spacing;
@@ -147,4 +147,18 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+}
+
+@mixin shadow($shadow) {
+  -webkit-box-shadow: $shadow;
+  -moz-box-shadow: $shadow;
+  box-shadow: $shadow;
+}
+
+@mixin navbar-icon {
+  padding: $small-element-spacing;
+  border-radius: $outer-border-radius-10;
+  background: $white-transparent-background-75;
+  box-sizing: border-box;
+  @include shadow($firm-shadow);
 }
