--- a/src/components/tags/displayed-tag/DisplayedTag.scss
+++ b/src/components/tags/displayed-tag/DisplayedTag.scss
@@ -2,6 +2,8 @@
 @import './src/styles/shared';
 
 .displayed-tag-container {
+  cursor: pointer;
+
   .displayed-tag {
     display: flex;
     justify-content: center;
