--- a/src/components/pages/menu-page/menu-plan/MenuPlan.scss
+++ b/src/components/pages/menu-page/menu-plan/MenuPlan.scss
@@ -76,7 +76,7 @@
          display: flex;
          justify-content: center;
          font-weight: bold;
-         height: 6.5vh;
+         height: 60px;
        }
      }
 
