--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $bottom-navbar-height: 70px;
-$navbar-width: 90vmin;
-$page-width: 90vmin;
+$navbar-width: 90vw;
+$page-width: 90vw;
 $top-navbar-height: 60px;
 
 $page-offset: 20px;
