--- a/src/components/navbars/top-navbar/TopNavbar.scss
+++ b/src/components/navbars/top-navbar/TopNavbar.scss
@@ -3,9 +3,7 @@
 
 .top-navbar-container {
   @include translucent-tile;
-  @media (orientation: landscape) {
-    max-width: calc(#{$max-page-width} + #{$big-element-spacing});
-  }
+  @include navbar-max-width;
   padding: 0;
   display: flex;
   justify-content: flex-start;
