T-61: Hide DishCardAdd component from users

--- a/src/components/navbars/top-navbar/TopNavbar.scss
+++ b/src/components/navbars/top-navbar/TopNavbar.scss
@@ -20,7 +20,14 @@
     .back-button, .add-dish-button {
       cursor: pointer;
       @include navbar-icon;
+    }
+
+    .back-button {
       margin: 0 $big-element-spacing 0 $standard-element-spacing;
+    }
+
+    .add-dish-button {
+      margin: 0 $big-element-spacing 0 0;
     }
   }
 
