T-62: Implemented ReactHookForm in SignUp and Sign in pages

--- a/src/components/pages/authentication/AuthenticationPage.scss
+++ b/src/components/pages/authentication/AuthenticationPage.scss
@@ -11,11 +11,11 @@
   }
 
   .sign-in-slide {
-    background: #3f0f8e;
+    background: #4b13a9;
   }
 
   .sign-up-slide {
-    background: #09001e;
+    background: #320b72;
   }
 
   .authentication-slide {
@@ -67,7 +67,7 @@
       max-width: 50%;
     }
 
-    .authentication-input-row {
+    .authentication-form {
       width: 100%;
 
       .authentication-input {
