--- a/src/components/users/profile-edit-panel/ProfileEditFormShared.scss
+++ b/src/components/users/profile-edit-panel/ProfileEditFormShared.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables";
 @import "../../../styles/shared";
 
-.change-form {
+.profile-edit-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
