--- a/src/components/pages/authentication/AuthenticationPage.scss
+++ b/src/components/pages/authentication/AuthenticationPage.scss
@@ -5,6 +5,9 @@
   @include page-container;
 
   .sign-in-slide, .sign-up-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     will-change: transform;
@@ -97,6 +100,11 @@
     .authentication-panel-redirect {
       z-index: 10;
       margin: 0 auto $big-element-spacing auto;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
