--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -10,7 +10,7 @@
     .ingredient-tile {
       @include chip;
 
-      &.new-ingredient-tile {
+      &.new {
         border: 2px solid rgba(255, 255, 255, 0.75);
         box-sizing: border-box;
       }
