T69.5: Removed unused dependencies

--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -9,6 +9,7 @@
 
     .ingredient-tile {
       @include chip;
+      cursor: pointer;
 
       &.new {
         border: 2px solid rgba(255, 255, 255, 0.75);
