T70: Font size optimization

--- a/src/components/dishes/dish-recipe/DishRecipe.scss
+++ b/src/components/dishes/dish-recipe/DishRecipe.scss
@@ -43,7 +43,7 @@
     }
 
     .recipe-step-text {
-      font-size: $small-font-size;
+      font-size: $tiny-font-size;
       padding: $standard-element-spacing $small-element-spacing;
       flex-grow: 1;
     }
