--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -9,7 +9,10 @@
 
     .ingredient-tile {
       @include chip;
-      cursor: pointer;
+
+      &.editable {
+        cursor: pointer;
+      }
 
       &.new {
         border: 2px solid rgba(255, 255, 255, 0.75);
