--- a/src/components/users/profile-edit-panel/ProfileEditPanel.scss
+++ b/src/components/users/profile-edit-panel/ProfileEditPanel.scss
@@ -21,7 +21,8 @@
 
     .profile-panel-requirements {
       font-size: $small-font-size;
-      margin-bottom: $big-element-spacing;
+      width: 90%;
+      margin: 0 auto $big-element-spacing;
     }
   }
 }
