--- a/src/components/navbars/top-navbar/search-bar/SearchBar.scss
+++ b/src/components/navbars/top-navbar/search-bar/SearchBar.scss
@@ -1,7 +1,7 @@
 @import './src/styles/variables';
 @import './src/styles/shared';
 
-.dish-names-list-container {
+.search-bar-wrapper {
   flex-grow: 1;
 
   .search-bar-container {
