--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -42,7 +42,7 @@
   align-items: center;
   justify-content: center;
   margin: 3px;
-  font-size: $tiny-font-size;
+  font-size: $chip-font-size;
   background-color: $white-transparent-background-20;
   padding: $small-element-spacing $standard-element-spacing;
   border-radius: $round-border-radius-50;
